--- a/Ad_marketing_sponsorship/css/style.css
+++ b/Ad_marketing_sponsorship/css/style.css
@@ -36,7 +36,8 @@ html, body{ height: 100%; }
 .contact-us-box .info h2::after{ content: ""; position: absolute; left: 50%; margin-left: -46px; bottom: 0; width: 92px; height: 6px; display: block; background-color:#ff9f37;}
 
 .contact-us-box h3{ color: #fff; font-size: 24px; line-height: 36px; text-shadow: 0 0 10px rgba(0,0,0,.3), 0 5px 8px rgba(0,0,0,.3);}
-.contact-us-box h3 span.yellow{color: #ffeb3b;}
+.contact-us-box h3 span.yellow{color: #ffeb3b; padding: 5px 10px; border:2px solid #ffeb3b; display: inline-block; margin-top: 15px;text-shadow: none; }
+
 .contact-us-box p.sub_title{  padding: 12px 0; font-size: 17px; line-height: 28px; letter-spacing: 1px;}
 .contact-us-box .main-box p.sub_title{ color: #fff; font-size: 18px; text-shadow: 0 0 10px rgba(0,0,0,.3), 0 5px 8px rgba(0,0,0,.3);}
 .contact-us-box .main-box h4.title{ font-size: 18px; color: #ff9f37; text-shadow: 0 0 10px rgba(0,0,0,.3), 0 5px 8px rgba(0,0,0,.3); }
@@ -71,28 +72,31 @@ html, body{ height: 100%; }
 .question-box textarea.tbox{ min-height: 120px; }
 
 ul.plan{ width: 100%; padding:40px 0 20px 0; text-align: left; }
-ul.plan li{ width: 30%; margin: 0 1.5% 15px 1.5%; max-width: 500px; float: left; background-color: #fff; border-radius: 10px; overflow: hidden; }
-ul.plan li h4.top_title{ width: 100%; background-color: #009688; text-align: center; color: #fff; padding: 15px 10px; font-size: 20px; position: relative; padding-top: 80px;}
+ul.plan li{ width: 30%; margin: 0 1.5% 15px 1.5%; max-width: 500px; float: left; background-color: #fff; border-radius: 10px; /*overflow: hidden;*/ position: relative; }
+ul.plan li h4.top_title{ width: 100%; background-color: #009688; text-align: center; color: #fff; padding: 15px 10px; font-size: 20px; position: relative; padding-top: 80px;padding-bottom: 20px; border-radius: 10px 10px 0 0;}
 ul.plan li h4.top_title::after{ content: ""; position: absolute; font-family: 'Roboto', 'Noto Sans TC',Arial,"微軟正黑體","新細明體", sans-serif; font-size: 34px; width: 100%; text-align:center; display: inline-block; top: 15px; left: 0; line-height: 60px; color: #fff; font-weight: bold; }
+ul.plan li h4.top_title span{ font-size: 18px; padding-top: 10px; color: #fcff3b; display: inline-block; }
+
 ul.plan li h4.h4_icon_02{ background-color: #ff9800; }
 ul.plan li h4.h4_icon_03{ background-color: #e91e63; }
 ul.plan li h4.h4_icon_01::after{ content: "Basic";}
 ul.plan li h4.h4_icon_02::after{ content: "Elite";}
 ul.plan li h4.h4_icon_03::after{ content: "VIP";}
-
+ul.plan li p.label{ position: absolute; font-size: 16px; top: 125px; left:calc(50% - 100px);text-align: center; font-weight: bold; z-index: 15; }
+ul.plan li p.label span{ border:2px solid #009688; background-color: #fff; width: 200px; border-radius: 50px; color: #009688; display: inline-block; padding:6px 20px;}
 ul.plan li h5{ padding: 10px 0; text-align: center; font-weight: bold;  color: #009688; font-size: 18px; border:1px solid #009688;}
 
 ul.plan li p.hightlight{ font-weight: bold; padding: 5px 0; position: relative; padding-left: 28px;}
 ul.plan li p.hightlight::before{ content: "\f00c"; left: 0; top: 5px; position: absolute; width: 20px; line-height: 20px; display: inline-block; color: #4caf50; font-family: "FontAwesome"; }
 ul.plan li .red{ color: #e91e63; }
-ul.plan li .plan_info{ padding: 20px; display: inline-block; width: 100%;}
+ul.plan li .plan_info{ padding:30px 20px 20px 20px; display: inline-block; width: 100%;}
 ul.plan li .plan_info ul li{ width: initial; margin: 0; float: none; padding-left: 30px; position: relative; }
 ul.plan li .plan_info ul li::before{ position: absolute; top: 0; left: 0; content: "\f0da"; left: 0; top: 5px; position: absolute; width: 20px; line-height: 16px; display: inline-block; color: #4caf50; font-family: "FontAwesome";  }
 
 ul.plan li p.ex{ font-size: 14px; padding: 20px 0; text-align: center;}
 ul.plan li p.ex span{ font-size: 17px; font-weight: bold; padding: 5px 0; display: inline-block;}
 ul.plan li p.ex span.yellow{ background-color: #e91e63; font-size: 14px; margin-top: 10px; border-radius: 4px; color: #fff; display: inline-block; font-weight: normal; padding:3px 10px; }
-ul.plan li ul.nb{ list-style-type:decimal; text-align: left; padding: 15px 0;}
+ul.plan li ul.nb{ list-style-type:none; text-align: left; padding: 15px 15px 5px 15px;}
 ul.plan li ul.nb li{ color: #333; padding: 2px 0 2px 15px; }
 
 ul.contactus{ width: 100%; padding: 40px 0; max-width: 600px; margin: 0 auto; text-align: center; }
@@ -113,7 +117,7 @@ ul.contactus li a.icon_email::after{ background-image: url(../images/btn_contact
 .icon_06::before { content: "\f11c";}
 .icon_07::before { content: "\f0e0";}
 
-.fillinBox select{ width:100%; border: 0; font-size: 16px; line-height: 30px; background: url(../images/icon_arr.png) center right no-repeat; background-size: contain; height: 50px; background-color: #f2f0f0; padding:10px 15px 10px 50px; border-radius: 4px; appearance:none; -moz-appearance:none;  -webkit-appearance:none;}
+.fillinBox select{ width:100%; border: 0; font-size: 16px; line-height: 30px; background: url(../images/icon_arr.png) center right no-repeat; background-size: contain; height: 50px; background-color: #fff; border:1px solid #d8d8d8; padding:10px 15px 10px 50px; border-radius: 4px; appearance:none; -moz-appearance:none;  -webkit-appearance:none;}
 .fillinBox select option.gray{ color: #888; }
 
 .question-box .note{ font-size: 15px; line-height: 24px; color: #555;}
