--- a/alishan/css/style.css
+++ b/alishan/css/style.css
@@ -72,7 +72,7 @@ html, body{ height: 100%; }
 .main_contents{ width: 100%; background: url(../images/bg_00.jpg) 0 0 repeat;}
 .main_contents .ContentsBox{ width: 100%; }
 
-.main_contents .bannerBox{ width: 100%; height: 710px; background: url(../images/bg_index.jpg) center center no-repeat; background-size: cover; }
+.main_contents .bannerBox{ width: 100%; height: 710px; background: url(../images/banner.png) center center no-repeat; background-size: cover; }
 ul.p_note{ text-align: left; padding: 30px 0; position: relative; margin-bottom: 35px; }
 ul.p_note::after{ content: ""; position: absolute; width: 100%; height: 10px; background-color: #333; bottom: 0; left: 0; /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f6e3f0+0,eca6e0+41,c7a4f4+60,9bedfa+84,ffffff+99 */
 background: rgb(246,227,240); /* Old browsers */
